rename packeges